fix btns on mobile top

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6420,6 +6420,9 @@ form button {
     right: 40px;
     width: 40px;
     height: auto; }
+    @media (max-width: 767px) {
+      .map__zoom_btns {
+        top: 60%; } }
     .map__zoom_btns .zoom_btn {
       width: 40px;
       height: 40px;
