--- a/sass/map.scss
+++ b/sass/map.scss
@@ -45,6 +45,10 @@
     width: 40px;
     height: auto;
 
+    @media #{$mobile} {
+      top: 60%;
+    }
+
     .zoom_btn {
       width: 40px;
       height: 40px;
